Finish rough layouts of pages

--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,30 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+a[type=menu] {
+  color: #FFF;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a:hover[type=menu] {
+   color: rgb(209, 209, 209)
 }
-
-.App-link {
-  color: #61dafb;
+a:link[type=menu] {
+  text-decoration: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:visited[type=menu] {
+  text-decoration: none;
+}
+.link {
+  text-decoration: none;
+}
+.link:link {
+  text-decoration: none;
+}
+.link:visited {
+  text-decoration: none;
+}
+.link {
+  color: #000;
+}
+.link:hover {
+   color: rgb(75, 75, 75)
 }
